--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="mug-development-workbench" class="anchor" href="#mug-development-workbench" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mug development workbench</h1>
 
-<p><img src="http://pixabay.com/static/uploads/photo/2012/04/13/11/48/coffee-mug-32046_640.png" alt="alt text" title="mug"></p>
+<p><img src="images/logo.png" alt="alt text" title="mug"></p>
 
 <p>Mug helps you not to install your development workbench. It should always be easy as drinking from a mug ;)</p>
 
